# KittehWatchOS

./: .gitignore  arm-clang.ini  arm-none-eabi.ini  gcc_nrf52.ld  meson.build  meson_options.txt
builddir/: .ninja_log  build.ninja  build.ninja~  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
meson_depends/: lvgl.meson
src/: lvtest.c  main.c  sdk_config.h
src/apps/appmenu/: appmenu.c  appmenu.h
src/apps/clock/: clock.c  clock.h
src/apps/test/: rick.h  test.c  test.h
src/displaymanager/: displaymanager.c  displaymanager.h
src/includes/: common.h
src/lvconf/: lv_conf.h  lv_drv_conf.h
src/platform/Linux/: lv_conf.h  lv_drv_conf.h
src/platform/Linux/FreeRTOS/: FreeRTOSConfig.h  heap_4.c  port.c  portmacro.h
src/platform/Linux/backlight/: backlight.c
src/platform/Linux/display/: display.c
src/platform/Linux/misc/: misc.c
src/platform/Linux/thread/: thread.c
src/platform/Linux/time/: time.c
src/platform/PineTime/: lv_conf.h  lv_drv_conf.h  sdk_config.h
src/platform/PineTime/FreeRTOS/: FreeRTOSConfig.h  port.c  port_cmsis.c  port_cmsis_systick.c  portmacro.h  portmacro_cmsis.h
src/platform/PineTime/backlight/: backlight.c
src/platform/PineTime/display/: St7789.c  St7789.h  display.c  display.cpp  i2c.c  i2c.h  spi.c  spi.h
src/platform/PineTime/display/InfiniTime/Components/Gfx/: Gfx.cpp  Gfx.h
src/platform/PineTime/display/InfiniTime/drivers/: BufferProvider.h  Cst816s.cpp  Cst816s.h  DebugPins.cpp  InternalFlash.cpp  InternalFlash.h  Spi.cpp  Spi.h  SpiMaster.c  SpiMaster.cpp  SpiMaster.h  SpiNorFlash.cpp  SpiNorFlash.h  St7789.c  St7789.cpp  St7789.h  TwiMaster.cpp  TwiMaster.h  Watchdog.cpp  Watchdog.h
src/platform/PineTime/misc/: misc.c
src/platform/PineTime/thread/: thread.c
src/platform/PineTime/time/: time.c
src/platform/includes/: backlight.h  display.h  misc.h  thread.h  time.h
src/types/: app.h  numbers.h
